--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
-requests
+chardet==5.2.0
+fqdn==1.5.1
+isoduration==20.11.0
+jsonpointer==2.4
+jupyter==1.0.0
+pandas==2.2.2
+uri-template==1.3.0
+webcolors==1.13
